RTL fix for btn-toggle-pwd

--- a/src/Smartstore.Web/wwwroot/shared/_rtl.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_rtl.scss
@@ -44,6 +44,12 @@
 		padding-left: 1rem;
 	}
 
+    .btn-toggle-pwd {
+        right: auto;
+        left: 0.5rem;
+    }
+
+
 	// Nav collapsible
 	// ---
 	@include media-breakpoint-down(sm) {
