Summernote: minor style fix

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -468,6 +468,7 @@ $img-margin-right: 10px;
     position: absolute;
     display: none;
     border: 1px solid #000;
+    z-index: 1;
 
     & > div {
         position: absolute;
