RTL style enhancements

--- a/src/Smartstore.Web/wwwroot/shared/_forms.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_forms.scss
@@ -47,7 +47,7 @@ fieldset.content-group {
                 background: $body-bg;
             }
 
-            padding-right: 1rem;
+            padding-inline-end: 1rem;
             z-index: 1;
         }
     }
