--- a/src/Smartstore.Web/wwwroot/shared/_rtl.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_rtl.scss
@@ -39,11 +39,6 @@
 	// Forms
 	// ------------------------------
 
-	fieldset.content-group > legend > span {
-		padding-right: initial;
-		padding-left: 1rem;
-	}
-
     .form-floating > label {
         transform-origin: 100% 0;
     }
@@ -69,7 +64,7 @@
 	}
 
 	// Pagination
-	// -----------
+	// ----------
 
 	.pagination .page-nav {
 		&:first-of-type { margin-left: 0.25rem; margin-right: initial; }
@@ -78,7 +73,7 @@
 
 
 	// Star rating
-	// ----
+	// -----------
 
 	.star-rating:not(:checked) > label {
 		float: left;
@@ -88,47 +83,8 @@
 	// Typo
 	// ----
 
-	.heading {
-		&:before {
-			background: radial-gradient(ellipse at right, $body-bg 25%, rgba(#000, 0.25) 100%);
-		}
-
-		.heading-title {
-			padding-right: 0;
-			padding-left: 1rem;
-		}
-	}
-
-	.heading-center {
-		.heading-title {
-			padding-right: 0;
-			padding-left: 1rem;
-		}
-	}
-
-
-	// Utils
-	// ------------------------------
-
-	.has-count[data-count]:after {
-		padding-left: 0;
-		padding-right: 0.2rem;
-	}
-
-	.list-group {
-		.list-group-item.active {
-			&:before {
-				right: -1px;
-				left: auto;
-			}
-		}
-
-		&.has-icons {
-			.list-group-item-icon {
-				margin-left: 0.75rem;
-				margin-right: initial;
-			}
-		}
+	.heading:before {
+	    background: radial-gradient(ellipse at right, $body-bg 25%, rgba(#000, 0.25) 100%);
 	}
 
 
