--- a/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
@@ -35,6 +35,7 @@
         // Is popperized now (04.01.2024)
 		position: absolute;
 		margin-top: 0 !important;
+        inset-inline-start: initial;
 	}
 }
 
