--- a/src/Smartstore.Web/wwwroot/lib/datetimepicker/scss/_tempusdominus.scss
+++ b/src/Smartstore.Web/wwwroot/lib/datetimepicker/scss/_tempusdominus.scss
@@ -1,4 +1,4 @@
-/// <reference path="../../../bootstrap/scss/bootstrap.scss" />
+/// <reference path="../../bootstrap/scss/bootstrap-reboot.scss" />
 
 $bs-datetimepicker-timepicker-font-size: 1.2em !default;
 $bs-datetimepicker-active-bg: $primary !default;
