Summernote: Resize image zoom level collision & more work on selection paths

--- a/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
+++ b/src/Smartstore.Web/wwwroot/lib/editors/summernote/scss/summernote.scss
@@ -746,6 +746,15 @@ $img-margin-right: 10px;
     }
 }
 
+.note-duotone-primary,
+.note-duotone-secondary {
+    color: var(--primary);
+}
+
+.note-duotone-secondary {
+    opacity: 0.4;
+}
+
 .btn-group-split {
     // Split dropdown buttons, e.g. "Color"
     outline: 1px solid transparent;
