--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_modal.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_modal.scss
@@ -150,7 +150,8 @@
   .btn-close,
   .close {
     padding: calc(var(--#{$prefix}modal-header-padding-y) * .5) calc(var(--#{$prefix}modal-header-padding-x) * .5);
-    margin: calc(-.5 * var(--#{$prefix}modal-header-padding-y)) calc(-.5 * var(--#{$prefix}modal-header-padding-x)) calc(-.5 * var(--#{$prefix}modal-header-padding-y)) auto;
+    margin-block: calc(-.5 * var(--#{$prefix}modal-header-padding-y));
+    margin-inline: auto calc(-.5 * var(--#{$prefix}modal-header-padding-x));
   }
 }
 
