RTL: Fixed select chevron placement

--- a/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_forms.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bootstrap/scss/_forms.scss
@@ -89,7 +89,7 @@ select.form-control {
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
     background-size: 16px 12px;
-    padding-right: 2.25rem;
+    padding-inline-end: 2.25rem;
   }
 }
 
