Entity patcher (wip)

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -5,16 +5,6 @@
 
 @model ProductModel
 
-@{ 
-    var fullDescriptionSaveUrl = Url.Action("Patch", "Entity", new
-    {
-        area = "",
-        entityName = typeof(Product).FullName,
-        propertyName = nameof(Product.FullDescription),
-        entityId = Model.Id,
-    });
-}
-
 <script sm-target-zone="Scripts" data-origin="product-info">
 	$(function () {
         $('#@Html.IdFor(model => model.ProductTypeId)').on('change', function () {
@@ -227,7 +217,8 @@
                     <smart-label asp-for="Locales[item].FullDescription" />
 			    </div>
                 <div class="adminData wide">
-                    <editor asp-for="Locales[item].FullDescription" />
+                    <editor asp-for="Locales[item].FullDescription" 
+                            asp-additional-viewdata='new { saveUrl = Url.PatchLocalizedEntity<Product>(nameof(Product.FullDescription), Model.Id, Model.Locales[item].LanguageId) }' />
                     <span asp-validation-for="Locales[item].FullDescription"></span>
                 </div>
 		    </div>
@@ -264,7 +255,7 @@
 			    </div>
                 <div class="adminData wide">
                     <ai-rich-text asp-for="FullDescription" entity-name="@Model.Name" entity-type="Product">
-                        <editor asp-for="FullDescription" asp-additional-viewdata='new { saveUrl = fullDescriptionSaveUrl }' />
+                        <editor asp-for="FullDescription" asp-additional-viewdata='new { saveUrl = Url.PatchEntity<Product>(nameof(Product.FullDescription), Model.Id) }' />
                     </ai-rich-text>
                     <span asp-validation-for="FullDescription"></span>
                 </div>
