--- a/src/Smartstore.Web/Views/Shared/EditorTemplates/Html.cshtml
+++ b/src/Smartstore.Web/Views/Shared/EditorTemplates/Html.cshtml
@@ -7,14 +7,13 @@
 
 @{
     var lazy = GetMetadata<bool?>("lazy") ?? true;
+    var saveUrl = GetMetadata<string>("saveUrl");
     var id = Html.IdForModel();
     var html = ((string)ViewData.TemplateInfo.FormattedModelValue);
     var htmlIsEmpty = HtmlUtility.IsEmptyHtml(html);
     var culture = WorkContext.WorkingLanguage.LanguageCulture;
 
     Assets.BodyAttributes["data-file-manager-url"] = Display.GetFileManagerUrl();
-
-    var attributes = new AttributeDictionary().Merge(ConvertUtility.ObjectToDictionary(ViewData["htmlAttributes"] ?? new object()));
 }
 
 <script src="~/bundle/js/codemirror.js" sm-key="codemirror" sm-target-zone="scripts"></script>
@@ -54,7 +53,7 @@
               name="@Html.NameForModel()"
               class="summernote-editor"
               attr-class='(lazy, "d-none")'
-              attrs="attributes">
+              attr-data-save-url="(saveUrl.HasValue(), saveUrl)">
         @Html.Raw(html)
     </textarea>
 
