Added save-url to all Summernote instances

--- a/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Category/_CreateOrUpdate.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Smartstore.Core.Content.Media
+@using Smartstore.Core.Catalog.Categories
 
 @model CategoryModel
 
@@ -120,7 +121,8 @@
                         <smart-label asp-for="Locales[item].Description" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="Locales[item].Description" />
+                        <html-editor asp-for="Locales[item].Description" 
+                                     save-url="@(Url.PatchLocalizedEntity<Category>(nameof(Category.Description), Model.Id, Model.Locales[item].LanguageId)))" />
                         <span asp-validation-for="Locales[item].Description"></span>
                     </div>
 		        </div>
@@ -129,7 +131,8 @@
                         <smart-label asp-for="Locales[item].BottomDescription" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="Locales[item].BottomDescription" />
+                        <html-editor asp-for="Locales[item].BottomDescription" 
+                                     save-url="@(Url.PatchLocalizedEntity<Category>(nameof(Category.BottomDescription), Model.Id, Model.Locales[item].LanguageId)))" />
                         <span asp-validation-for="Locales[item].BottomDescription"></span>
                     </div>
 		        </div>
@@ -186,7 +189,7 @@
                                       entity-type="Category"
                                       display-image-options="false"
                                       display-layout-options="false">
-                            <editor asp-for="Description" />
+                            <html-editor asp-for="Description" save-url="@(Url.PatchEntity<Category>(nameof(Category.Description), Model.Id))" />
                         </ai-rich-text>
                         <span asp-validation-for="Description"></span>
                     </div>
@@ -202,7 +205,7 @@
                                       entity-id="@Model.Id"
                                       display-layout-options="false"
                                       display-image-options="false">
-                            <editor asp-for="BottomDescription" />
+                            <html-editor asp-for="BottomDescription" save-url="@(Url.PatchEntity<Category>(nameof(Category.BottomDescription), Model.Id))" />
                         </ai-rich-text>
                         <span asp-validation-for="BottomDescription"></span>
                     </div>
