--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -217,7 +217,8 @@
                     <smart-label asp-for="Locales[item].FullDescription" />
 			    </div>
                 <div class="adminData wide">
-                    <html-editor asp-for="Locales[item].FullDescription" save-url="@(Url.PatchLocalizedEntity<Product>(nameof(Product.FullDescription), Model.Id, Model.Locales[item].LanguageId))" />
+                    <html-editor asp-for="Locales[item].FullDescription" 
+                                 save-url="@(Url.PatchLocalizedEntity<Product>(nameof(Product.FullDescription), Model.Id, Model.Locales[item].LanguageId))" />
                     <span asp-validation-for="Locales[item].FullDescription"></span>
                 </div>
 		    </div>
