--- a/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/ProductAttribute/_CreateOrUpdate.cshtml
@@ -52,7 +52,8 @@
                         <smart-label asp-for="Locales[item].Description" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="Locales[item].Description" />
+                        <html-editor asp-for="Locales[item].Description" 
+                                     save-url="@(Url.PatchLocalizedEntity<ProductAttribute>(nameof(ProductAttribute.Description), Model.Id, Model.Locales[item].LanguageId))" />
                         <span asp-validation-for="Locales[item].Description"></span>
                     </div>
 		        </div>
@@ -84,7 +85,7 @@
                         <smart-label asp-for="Description" />
 			        </div>
                     <div class="adminData wide">
-                        <editor asp-for="Description" />
+                        <html-editor asp-for="Description" save-url="@(Url.PatchEntity<ProductAttribute>(nameof(ProductAttribute.Description), Model.Id))" />
                         <span asp-validation-for="Description"></span>
                     </div>
 		        </div>
