--- a/src/Smartstore.Web/Areas/Admin/Views/Shipping/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Shipping/_CreateOrUpdate.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Smartstore.Admin.Models.Shipping
+@using Smartstore.Core.Checkout.Shipping
 
 @model ShippingMethodModel
 
@@ -25,7 +26,8 @@
                     <smart-label asp-for="Locales[item].Description" />
 				</div>
 				<div class="adminData wide">
-                    <editor asp-for="Locales[item].Description" />
+                    <html-editor asp-for="Locales[item].Description"
+                                 save-url="@(Url.PatchLocalizedEntity<ShippingMethod>(nameof(ShippingMethod.Description), Model.Id, Model.Locales[item].LanguageId))" />
                     <span asp-validation-for="Locales[item].Description"></span>
 				</div>
 			</div>
@@ -46,7 +48,7 @@
                     <smart-label asp-for="Description" />
 				</div>
 				<div class="adminData wide">
-                    <editor asp-for="Description" />
+                    <html-editor asp-for="Description" save-url="@(Url.PatchEntity<ShippingMethod>(nameof(ShippingMethod.Description), Model.Id))" />
                     <span asp-validation-for="Description"></span>
 				</div>
 			</div>
